--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@shopify/react-native-skia": "^0.1.237",
     "apisauce": "^3.0.1",
     "react": "18.2.0",
     "react-native": "0.71.0",
